<resources>
    <string name="app_name">Statics_Yoga</string>
    <string name="trikonasana">
        Поза треугольника  \n
        Довольно-таки сложная асана для тех, у кого с гибкостью всё печально.
        И хороша для остальных — развивает баланс, растягивает подколенные сухожилия и внутреннюю поверхность бёдер.\n
        Как сделать: стойте прямо, ноги расставьте широко.
        Правая ступня «смотрит» вперёд, левая — в сторону, в которую направлен ваш корпус.
        В таком положении таз слегка развернётся. Обе ноги должны быть прямыми.
        Поднимите руки (но не плечи) в стороны так, чтобы они образовали одну прямую линию, параллельную полу.
        Тяните правую ладонь, а за ней и корпус вперёд, будто вас кто-то тянет к стене.
        Как только поймёте, что тянуться дальше не можете, опустите руку вниз и, если сможете,
        поставьте ладонь на пол впереди или сзади ноги. Если нет, держите руку на ноге.
        Сохраняйте прямую линию в руках и смотрите вверх, на левую ладонь.
        Вес распределите равномерно на обе ноги, а в корпусе не допускайте прогиба.
        Дышите глубоко и спокойно.</string>
    <string name="virabxadrasana">Поза воина II \n Может, конечно, название и не говорит о дзене,
        но поверьте, именно эта поза поможет успокоиться,
        а ещё подтянет ноги, укрепит лодыжки и повысит выносливость. \n
        Как сделать: сделайте выпад правой ногой вперёд, расстояние между ногами должно быть равно длине четырёх ваших ступней.
        Поверните левую ступню так, чтобы пальцы «смотрели» в сторону (в ту же, что и корпус), а пальцы правой ступни — вперёд.
        Сгибайте правую ногу в колене, пока она не образует прямой угол. Поднимите руки: правую — над правой ногой, левую — над левой.
        Они должны быть прямой, параллельной полу линией. Смотрите вперёд, на пальцы своей правой руки.</string>
    <string name="virabxadrasana_one">Поза воина I \n Укрепляет ноги, руки и мышцы спины, а также растягивает мышцы груди,
        плеч, шеи и бёдер.\n
        Как сделать: примите позу «собаки мордой вниз». Затем поставьте правую ногу между ладоней, перенося вес тела на ступни.
        Медленно поднимите корпус вверх, держите спину прямо. Поднимите руки вверх и смотрите на ладони.</string>
    <string name="bxudzhangasana">Поза кобры» (змеи).\n  Если выполняется правильно — полезна для поясницы (иначе — вредна).
        Снимает напряжение с нижней части таза, что характерно для большинства современных людей.
        Чистит и включает Свадхистана-чакру.</string>
    <string name="navasana">Поза кобры» (змеи).\n Ещё одна хорошая асана для баланса и растяжки задних мышц ног.\n
        Как сделать: садитесь на пол, вытяните ноги вперёд, корпус держите прямо.
        Согните ноги в коленях и оторвите стопы от земли. Держите равновесие и выпрямите колени.
        Ваше тело должно напоминать букву V.</string>
    <string name="gomukxasana">Коровьей головы (поза)\n
        Прежде чем приступить к выполнению Гомукхасаны,
        следует подготовить плечевые и тазобедренные суставы. Возьмите ремень и встаньте в Тадасану.
        Вытяните руки вперед и натяните ремень, разведя ладони примерно на метр друг от друга. Сделайте вдох,
        медленно поднимите руки над головой и задержитесь в этом положении на несколько секунд.
        На выдохе аккуратно заведите руки за спину и еще раз как следует натяните ремень.
        Повторите движения в обратном направлении: на вдохе верните руки в вертикальное положение,
        а на выдохе вытяните их перед собой.
        Если при совершении этих действий руки сгибаются в локтях, а плечи поднимаются,
        захватите ремень на несколько сантиметров шире. Вы должны выбрать такое расстояние между ладонями,
        чтобы руки оставались прямыми, а плечи направлялись вниз от головы.
        Выполните всю последовательность действий несколько раз. Когда почувствуете,
        что мышцы плечевого пояса хорошо разогрелись, повесьте ремень на левое плечо и вытяните левую руку в сторону
        параллельно полу, ладонью вниз. Заверните ее внутрь, большим пальцем к полу. Продолжайте вращать руку до тех пор,
        пока большой палец не будет смотреть назад, а ладонь не развернется к потолку. На выдохе одним решительным движением
        согните левую руку в локте и заведите предплечье за поясницу, расположив его вдоль талии. Направляйте локоть к корпусу,
        не отводите его назад. Если в этом положении передняя часть подмышки (большая грудная мышца) окажется зажата между
        корпусом и внутренней поверхностью руки, освободите ее и направьте вверх к плечу правой рукой. Затем продвиньте
        левое предплечье вверх: в идеале тыльная сторона ладони должна прижаться к спине в области между лопатками.
        Не отчаивайтесь, если достичь этого положения пока не получается. Не форсируйте движение, если мышцы к этому не готовы.
        Главное – направляйте левый локоть к корпусу.
        Вытяните правую руку вверх и разверните ее наружу так, чтобы большой палец смотрел вправо, а ладонь была обращена назад.
        Со­гни­те руку в локте. Удерживая ее возле головы, потянитесь правой ладонью вниз за спину.
        Захватите ремень обеими руками или, если можете, сцепите пальцы. Не выталкивайте вперед передние ребра.
        Отклонитесь назад, словно хотите облокотиться на левое предплечье, и направьте область нижних ребер вниз и внутрь.
        Оставайтесь в позе в течение минуты. Под­ни­май­те правый локоть к потолку, а левый направляйте вниз к полу.
        Затем расцепите пальцы, освободите руки, встряхните ими и выполните позу в другую сторону
        (правая рука внизу, левая вверху). \n
        Эффект \n
Раскрывает грудную клетку \n
Делает более эластичными мышцы и связки лодыжек, бедер и плечевого пояса \n
Вытягивает трицепсы и широчайшие мышцы спины
    </string>
    <string name="radzhakapotasana">Поза Голубя \n Приступая к освоению асан на раскрытие таза и вытяжение бедра,
        большинство из нас сталкивается с неприятным ощущением: наши тазобедренные суставы настолько малоподвижны,
        что кажется, будто они залиты суперклеем. Это вызвано множеством причин.
        Во-первых, современный человек проводит большую часть времени в положении сидя.
        Причем в отличие от представителей восточной культуры, которые с детства привыкают сидеть на полу,
        мы предпочитаем стулья и кресла. Сидячий образ жизни лишает нас возможности вращать,
        сгибать и вытягивать бедра — то есть совершать весь спектр движений,
        необходимых для сохранения подвижности в тазобедренных суставах.
        Во-вторых, популярные виды физической активности, такие как бег трусцой, езда на велосипеде и даже обычная пешая прогулка,
        требуют от бедер силы, а не гибкости. Наконец, третья причина — это стресс, который создает напряжение в теле, особенно в
        области таза и бедер, поскольку здесь расположено множество мышц, сухожилий и связок.
        Как же вернуть суставам подвижность? Для начала попробуйте включить в ежедневную практику позу Голубя.
        Эта асана идеальна для жестких бедер. Она растягивает мышцы-вращатели бедра, расположенные в области ягодиц,
        и длинные мышцы-сгибатели бедра, находящиеся на передней поверхности бедер и таза. Кроме того, при выполнении
        этой асаны приходится интенсивно разворачивать наружу бедро согнутой ноги, а бедро прямой ноги — заворачивать внутрь.
        Регулярное выполнение позы Голубя заметно повышает гибкость тазобедренных суставов и улучшает практику в целом.
        Вы сможете почувствовать эффект сразу же после занятия: походка станет легкой, даже если асана давалась с трудом.
        Если вы хоть раз выполняли эту позу, то знаете, насколько она сложна. В ней много внимания уделяется обособленной
        работе определенных мышц бедер, и именно это делает позу Голубя трудновыполнимой.
        Так что будьте готовы — прежде чем вы научитесь расслабляться в этой асане, придется потерпеть.
        Все, что от вас требуется, — это внимательно прислушиваться к себе, к физическим ощущениям, порой болезненным,
        и к той какофонии мыслей и эмоций, которая обязательно будет поначалу сопровождать вас при выполнении этой асаны.
        \n Эффект \n
        Повышает подвижность тазобедренных суставов.\n
        Вытягивает мышцы-вращатели и мышцы-сгибатели бедра.
    </string>
    <string name="bhekasana">Ложитесь на живот, опустите лоб на пол и вытяните руки вдоль туловища ладонями вверх.
        Мягко расправьте плечи, отведите трапециевидные мышцы от шеи. Со вдохом вытяните ноги, заверните бедра внутрь, втяните копчик.
        Приподнимите корпус от пола, прогнувшись в грудном отделе позвоночника. Одновременно перенесите руки вперед,
        сложив их перед собой так, чтобы локти оказались под плечами, ладони развернуты вниз.Направляйте лопатки вниз, к талии.
        Затем мягко отведите затылок назад и направьте вниз заднюю поверхность шеи: представьте, что тянете ее лопатками, устремляя их нижний край внутрь спины, к сердцу. Заворачивайте внутрь передние поверхности бедер, расширяя таким образом заднюю часть бедра.
         Направьте ягодицы к пяткам, лобок к полу, а нижнюю часть живота – область от лобка до пупка – вверх.
        Коленные чашечки обращены строго вниз. Все эти действия помогут избежать компрессии в области поясницы.
        Расположите левое предплечье на полу под углом 45° к линии позвоночника. Согните правую ногу в
        колене и захватите стопу правой рукой – пальцы развернуты назад, к лодыжке. Растяните переднюю поверхность бедра и паха,
        стремясь приблизить правую стопу к полу и создавая ровную дугу по всей длине спины.
        Следите за тем, чтобы ноги при этом не разворачивались наружу.
         Вытягивайте бедра от таза и прижимайте правую стопу к полу, одновременно поднимая живот, грудь, плечи, шею и голову.
        Если хватит гибкости, разверните правую ладонь так, чтобы пальцы были обращены вперед, к пальцам стопы, и попробуйте еще
        больше приблизить стопу к полу. Не заваливайтесь на правый бок. Задержитесь в позе на 5–10 циклов дыхания.
        С выдохом медленно опуститесь на пол, продолжая втягивать копчик и заворачивать бедра внутрь до тех пор,
        пока все тело не окажется на полу, и лишь затем полностью расслабьтесь. Выполните асану в другую сторону. \n
        Подготовительные асаны \n
        Бхуджангасана (поза Кобры) \n
        Вирасана (поза Героя) \n
        Сету Бандха Сарвангасана (поза Моста) \n
        Супта Вирасана (поза Героя в положении лежа) \n
        Эффект \n
        Вытягивает переднюю поверхность тела, лодыжки, бедра, пахи, область живота и грудной клетки, горло \n
        Укрепляет мышцы спины \n
        Улучшает осанку \n
        Стимулирует работу органов брюшной полости \n
        Противопоказания \n
        Высокое или низкое кровяное давление \n
        Мигрень \n
        Бессонница \n
        Травмы шеи, плечи и поясницы</string>
    <string name="reset">Сброс</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="time30">30 секунд</string>
    <string name="time45">45 секунд</string>
    <string name="time90">90 секунд</string>
    <string name="action_settings">Настройки</string>
</resources>