<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        style="@style/PurpleButton"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/reset"/>

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="70sp"/>

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PurpleButton"
        android:layout_alignStart="@id/resetBtn"
        android:layout_below="@id/timerTV"
        android:layout_marginTop="15dp"
        android:text="@string/stop"/>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PurpleButton"
        android:layout_alignBottom="@id/stopBtn"
        android:layout_alignEnd="@id/resetBtn"
        android:text="@string/start"/>

</RelativeLayout>